# NoxSync

./: .editorconfig  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  error.rs  lib.rs  main.rs  proxy.rs
src-tauri/src/binaries/: download.rs  mod.rs  paths.rs
src-tauri/src/commands/: mod.rs  montage.rs
src-tauri/src/export/: ffmpeg.rs  mod.rs  progress.rs  ytdlp.rs
src-tauri/src/montage/: concat.rs  mod.rs
src-tauri/src/platform/: mod.rs  twitch.rs  youtube.rs
src-tauri/src/project/: mod.rs  schema.rs
src/components/: AppInitialization.tsx
src/components/editor/: ActionMode.tsx  PreparationMode.tsx  ReviewStep.tsx  SelectionMode.tsx  SyncStep.tsx  VideoPlayer.tsx  index.ts
src/components/montage/: BulkAddModal.tsx  MontagePreview.tsx  (+6 more)
src/constants/: index.ts
src/hooks/: index.ts  useExport.ts  useHLSPlayer.ts  useProjectStats.ts  useProxyUrl.ts  useTheme.ts  useVideoResolver.ts  useVodUrl.ts
src/pages/: Dashboard.tsx  ProjectEdition.tsx  ProjectExport.tsx  ProjectMontage.tsx  ProjectOverview.tsx  ProjectSelection.tsx  Settings.tsx  index.ts
src/services/: export.ts  index.ts  library.ts  project.ts
src/stores/: editorStore.ts  index.ts  montageStore.ts  projectStore.ts  settingsStore.ts  streamerDatabaseStore.ts
src/types/: index.ts  react-player.d.ts
src/utils/: helpers.ts  index.ts
(+30 files in other folders)
