[package]
name = "nox"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Utils
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
async-trait = "0.1"

# HLS Proxy
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
urlencoding = "2"

# Binary management
zip = "2"
flate2 = "1"
tar = "0.4"
futures-util = "0.3"
tauri-plugin-dialog = "2"
which = "7"

[target.'cfg(target_os = "linux")'.dependencies]
xz2 = "0.1"

